@@ -120,4 +120,8 @@ void StepperQueue::forceStop() {
   // empty the queue
   read_idx = next_write_idx;
 }
+void StepperQueue::connect() {
+}
+void StepperQueue::disconnect() {
+}
 #endif
