@@ -3,6 +3,8 @@ pre 0.12.2:
     - Enable direct drive feature in StepperDemo for esp32
     - While direct driving, check if the signals can be applied
     - Add test mode (enter with t). Here can select stepper, a test sequence and run it
+    - In total four test sequences implemented until now
+- Add detachFromPin() and reattachToPin() to the API. Shouldn't be used from an application.
 
 0.12.1:
 - implement runForward()/runBackward()
